// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <SelectInput /> rendering should render empty select field when values are not supplied 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <Header
      className=""
      getError={[MockFunction]}
      hasError={[MockFunction]}
      meta={
        Object {
          "isVisible": true,
          "name": "input-field-name",
          "placeholder": "type here",
          "values": undefined,
        }
      }
      touched={false}
    >
      <SelectInput
        onChange={[Function]}
        value="baz"
      />
    </Header>
  </div>
</div>
`;

exports[`Form component <SelectInput /> rendering should render no select field when not visible 1`] = `
<div
  className=""
/>
`;

exports[`Form component <SelectInput /> rendering should render select field correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <Header
      className=""
      getError={[MockFunction]}
      hasError={[MockFunction]}
      meta={
        Object {
          "isVisible": true,
          "name": "input-field-name",
          "placeholder": "type here",
          "values": Object {
            "bar": "Bar",
            "baz": "Baz",
            "foo": "Foo",
          },
        }
      }
      touched={false}
    >
      <SelectInput
        onChange={[Function]}
        options={
          Array [
            Object {
              "name": "Foo",
              "value": "foo",
            },
            Object {
              "name": "Bar",
              "value": "bar",
            },
            Object {
              "name": "Baz",
              "value": "baz",
            },
          ]
        }
        value="baz"
      />
    </Header>
  </div>
</div>
`;
